--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -2,7 +2,14 @@ $color-green-light: #7ed56f;
 $color-green-medium: #55c57a;
 $color-green-dark: #28b485;
 
+$color-yellow-light: #ffb900;
+$color-yellow-dark: #ff7730;
+
+$color-blue-light: #2998ff;
+$color-blue-dark: #5643fa;
+
 $color-grey-light-1: #f7f7f7;
+$color-grey-light-2: #eee;
 $color-font-main: #777;
 $color-white: #fff;
 $color-black: #000;
@@ -14,3 +21,7 @@ $font-size-default: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+// BORDER_RADIUS
+$border-radius-sm: 2px;
+$border-radius-md: 4px;
