--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -60,7 +60,7 @@ body {
   }
 }
 
-.heading-tertionary {
+.heading-tertiary {
   font-size: $font-size-default;
   font-weight: 700;
   text-transform: uppercase;
