--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -327,7 +327,7 @@ body {
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 4px;
   padding: 6rem;
   padding-left: 9rem;
@@ -364,6 +364,21 @@ body {
   .story:hover .story__img {
     transform: translateX(-4rem) scale(1);
     filter: blur(4px) brightness(90%); }
+
+.bg-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.66;
+  z-index: -10;
+  overflow: hidden; }
+  .bg-video__content {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
 
 .header {
   height: 95vh;
@@ -432,6 +447,7 @@ body {
   padding: 35rem 0 20rem 0; }
 
 .section-stories {
+  position: relative;
   padding: 20rem 0;
-  background-image: linear-gradient(to bottom, #f7f7f7, rgba(247, 247, 247, 0.9)), url("../../img/video.mp4");
+  background-image: linear-gradient(to bottom, rgba(247, 247, 247, 0.77), rgba(247, 247, 247, 0.88));
   background-size: cover; }
