--- a/Natours/starter/sass/abstracts/_mixins.scss
+++ b/Natours/starter/sass/abstracts/_mixins.scss
@@ -5,3 +5,62 @@
     clear: both;
   }
 }
+
+@mixin position-centered {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+// MEDIA QUERIES
+
+/*
+0 - 600px: Phone
+600 - 900px: Tablets portrait
+900 - 1200px: Tablets Landscape
+1200 - 1800px: Normal styles
+1800px + : Big Desktops
+*/
+
+// @mixin respond-phone {
+//   @media (max-width: 600px) {
+//     @content;
+//   }
+// }
+
+// breakpoints:
+// - phone
+// - tab-port
+// - tab-land
+// - big-desk
+// 1em = 16px
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      //600px
+      @content;
+    }
+  }
+
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      //900px
+      @content;
+    }
+  }
+
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      //1200px
+      @content;
+    }
+  }
+
+  @if $breakpoint == big-desk {
+    @media (min-width: 112.5em) {
+      //1800px
+      @content;
+    }
+  }
+}
