--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -10,18 +10,29 @@ $color-blue-dark: #5643fa;
 
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
+$color-grey-dark-1: #999;
+$color-grey-dark-2: #333;
 $color-font-main: #777;
 $color-white: #fff;
 $color-black: #000;
 
 // FONT
 $font-size-default: 1.6rem;
+$font-size-small: 1.4rem;
 
 // GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 4rem;
 $gutter-horizontal: 6rem;
 
 // BORDER_RADIUS
 $border-radius-sm: 2px;
 $border-radius-md: 4px;
+$border-radius-circle: 50%;
+
+// SHADOWS
+$box-shadow-main: 0 1.5rem 4rem rgba($color-black, 0.2);
+$box-shadow-large: 0 3rem 6rem rgba($color-black, 0.1);
+$box-shadow-small: 0 1rem 2rem rgba($color-black, 0.15);
+$box-shadow-contrast: 0 1.5rem 2rem rgba($color-black, 0.7);
