--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -7,9 +7,50 @@
 }
 
 html {
+  // 1rem = 10px; 10px/16px = 62.5%
   font-size: 62.5%; /*to take into account the size of the user's browser font*/
+
+  // @include respond-phone {
+  //   font-size: 50%;
+  // }
+
+  // @include respond(phone) {
+  //   // 1rem = 8px, 8/1 = 50%;
+  //   font-size: 50%;
+  // } to delete because it dublicate the tab-port below
+
+  @include respond(tab-land) {
+    // 1rem = 9px, 9/16 =56,25%;
+    font-size: 56.25%;
+  }
+
+  @include respond(tab-port) {
+    // 1rem = 8px, 8/16 =50%;
+    font-size: 50%;
+  }
+
+  @include respond(big-desk) {
+    // 1rem = 12px, 12/16 = 75%;
+    font-size: 75%;
+  }
 }
 
 body {
   box-sizing: border-box;
+
+  @include respond(tab-land) {
+    // padding: 0 !important;
+  }
+
+  @include respond(tab-port) {
+    padding: 0 !important;
+  }
+
+  @include respond(phone) {
+    padding: 0 !important;
+  }
+
+  @include respond(big-desk) {
+    // font-size: 75%;
+  }
 }
