--- a/Natours/starter/sass/components/_composition.scss
+++ b/Natours/starter/sass/components/_composition.scss
@@ -4,22 +4,46 @@
   &__photo {
     position: absolute;
     width: 55%;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
+    box-shadow: $box-shadow-main;
     // border-radius: 2px;
     outline-offset: 1rem;
     transition: all 300ms ease-in-out;
 
+    @include respond(tab-port) {
+      position: relative;
+      float: left;
+      width: 33.333333333%;
+      box-shadow: $box-shadow-small;
+    }
+
     &--p1 {
       top: -2rem;
       left: 0;
+
+      @include respond(tab-port) {
+        top: 1rem;
+        transform: scale(1.2);
+      }
     }
     &--p2 {
       top: 2rem;
       right: 0;
+
+      @include respond(tab-port) {
+        transform: scale(1.3);
+        top: -1rem;
+        z-index: 100;
+      }
     }
     &--p3 {
       top: 10rem;
       left: 20%;
+
+      @include respond(tab-port) {
+        top: 1rem;
+        left: 0;
+        transform: scale(1.1);
+      }
     }
 
     &:hover {
