--- a/Natours/starter/sass/layout/_navigation.scss
+++ b/Natours/starter/sass/layout/_navigation.scss
@@ -4,53 +4,71 @@
   }
 
   &__button {
-    background-color: $color-white;
+    position: fixed;
+    top: 6.6rem;
+    right: 6.6rem;
+    z-index: 2000;
+
     height: 7rem;
     width: 7rem;
-    position: fixed;
-    top: 6rem;
-    right: 6rem;
-    border-radius: 50%;
-    z-index: 2000;
-    box-shadow: 0 1rem 3rem rgba($color-black, 0.1);
+    border-radius: $border-radius-circle;
+    box-shadow: $box-shadow-main;
+
     text-align: center;
+    background-color: $color-white;
     cursor: pointer;
+
+    @include respond(tab-port) {
+      top: 4rem;
+      right: 4rem;
+    }
+
+    @include respond(phone) {
+      top: 3rem;
+      right: 3rem;
+    }
   }
 
   &__background {
+    position: fixed;
+    z-index: 1000;
+    top: 7rem;
+    right: 7rem;
+
     height: 6rem;
     width: 6rem;
-    border-radius: 50%;
-    position: fixed;
-    top: 6.5rem;
-    right: 6.5rem;
-    background-image: radial-gradient(
-      $color-primary-light,
-      $color-primary-dark
-    );
-    z-index: 1000;
-    transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+    border-radius: $border-radius-circle;
+    background-image: radial-gradient($color-green-light, $color-green-dark);
+    transition: all 500ms ease-in-out;
 
-    //transform: scale(80);
+    @include respond(tab-port) {
+      top: 4.4rem;
+      right: 4.4rem;
+    }
+
+    @include respond(phone) {
+      top: 3.4rem;
+      right: 3.4rem;
+    }
   }
 
-  &__nav {
-    height: 100vh;
+  &__menu {
     position: fixed;
     top: 0;
-    left: 0;
-    z-index: 1500;
+    right: 0;
+    z-index: 1300;
+
+    height: 100vh;
 
     opacity: 0;
     width: 0;
-    transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    transition: all 500ms ease-in-out;
   }
 
   &__list {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include position-centered;
+
     list-style: none;
     text-align: center;
     width: 100%;
@@ -64,12 +82,12 @@
     &:link,
     &:visited {
       display: inline-block;
+      padding: 1rem 2rem;
       font-size: 3rem;
       font-weight: 300;
-      padding: 1rem 2rem;
-      color: $color-white;
       text-decoration: none;
       text-transform: uppercase;
+      color: $color-white;
       background-image: linear-gradient(
         120deg,
         transparent 0%,
@@ -77,10 +95,10 @@
         $color-white 50%
       );
       background-size: 220%;
-      transition: all 0.4s;
+      transition: all 300ms ease-in-out;
 
-      span {
-        margin-right: 1.5rem;
+      & span {
+        margin-right: 1.2rem;
         display: inline-block;
       }
     }
@@ -88,57 +106,62 @@
     &:hover,
     &:active {
       background-position: 100%;
-      color: $color-primary;
+      color: $color-font-main;
       transform: translateX(1rem);
     }
+
+    // &:active &__menu {
+    //   opacity: 0;
+    //   width: 0;
+    // }
   }
 
-  //FUNCTIONALITY
   &__checkbox:checked ~ &__background {
     transform: scale(80);
   }
 
-  &__checkbox:checked ~ &__nav {
+  &__checkbox:checked ~ &__menu {
     opacity: 1;
     width: 100%;
   }
 
-  //ICON
+  // ICON
   &__icon {
     position: relative;
-    margin-top: 3.5rem;
+    margin-top: 3.3rem;
+    transition: all 150ms ease-in-out;
 
     &,
     &::before,
     &::after {
       width: 3rem;
       height: 2px;
-      background-color: $color-grey-dark-3;
+      background-color: $color-grey-dark-2;
       display: inline-block;
     }
 
     &::before,
     &::after {
-      content: "";
       position: absolute;
       left: 0;
-      transition: all 0.2s;
+      content: "";
+      transition: all 150ms ease-in-out;
+    }
+    &::before {
+      top: -1rem;
     }
 
-    &::before {
-      top: -0.8rem;
-    }
     &::after {
-      top: 0.8rem;
+      top: 1rem;
     }
   }
 
   &__button:hover &__icon::before {
-    top: -1rem;
+    top: -1.3rem;
   }
 
   &__button:hover &__icon::after {
-    top: 1rem;
+    top: 1.3rem;
   }
 
   &__checkbox:checked + &__button &__icon {
@@ -146,12 +169,16 @@
   }
 
   &__checkbox:checked + &__button &__icon::before {
-    top: 0;
-    transform: rotate(135deg);
+    // transform: rotate(135deg);
+    transform: rotate(-45deg);
+
+    top: 0rem;
   }
 
   &__checkbox:checked + &__button &__icon::after {
-    top: 0;
-    transform: rotate(-135deg);
+    // transform: rotate(-135deg);
+    transform: rotate(45deg);
+
+    top: 0rem;
   }
 }
