--- a/Natours/starter/sass/pages/_home.scss
+++ b/Natours/starter/sass/pages/_home.scss
@@ -2,6 +2,10 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0;
   margin-top: -20vh;
+
+  @include respond(tab-port) {
+    padding: 20rem 0;
+  }
 }
 
 .section-features {
@@ -23,12 +27,20 @@
   & > * {
     transform: skewY(3deg);
   }
+
+  @include respond(tab-port) {
+    padding: 15rem 0;
+  }
 }
 
 .section-tours {
   margin-top: -8rem;
   background-color: $color-grey-light-1;
   padding: 35rem 0 20rem 0;
+
+  @include respond(tab-port) {
+    padding: 20rem 10rem 10rem;
+  }
 }
 
 .section-stories {
@@ -41,4 +53,67 @@
     rgba($color-grey-light-1, 0.88)
   );
   background-size: cover;
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
+}
+
+.section-booking {
+  padding: 15rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    $color-green-light,
+    $color-green-dark
+  );
+
+  @include respond(tab-port) {
+    padding: 10rem 0;
+  }
+}
+
+.book {
+  background-image: linear-gradient(
+      110deg,
+      rgba($color-white, 0.88) 0%,
+      rgba($color-white, 0.88) 50%,
+      transparent 50%
+    ),
+    url(../../img/nat-10.jpg);
+  background-size: 100%; // == cover
+  border-radius: $border-radius-sm;
+  box-shadow: $box-shadow-main;
+
+  @include respond(tab-land) {
+    background-image: linear-gradient(
+        110deg,
+        rgba($color-white, 0.88) 0%,
+        rgba($color-white, 0.88) 66%,
+        transparent 66%
+      ),
+      url(../../img/nat-10.jpg);
+    background-size: cover;
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(
+        to right,
+        rgba($color-white, 0.88) 0%,
+        rgba($color-white, 0.88) 100%
+      ),
+      url(../../img/nat-10.jpg);
+  }
+
+  &__form {
+    width: 50%;
+    padding: 6rem;
+
+    @include respond(tab-land) {
+      width: 66%;
+    }
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
+  }
 }
