--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -63,6 +63,10 @@ body {
     body {
       padding: 0 !important; } }
 
+::selection {
+  background-color: #28b485;
+  color: #fff; }
+
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
