--- a/Natours/starter/sass/components/_card.scss
+++ b/Natours/starter/sass/components/_card.scss
@@ -194,7 +194,8 @@
 
   // ------------------ RESPONSIVE FOR TABLETS AND NARROW
 
-  @include respond(tab-port) {
+  // @include respond(tab-port) {
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
     height: auto;
     border-radius: $border-radius-md;
     background-color: $color-white;
