--- a/Nexter/starter/sass/_features.scss
+++ b/Nexter/starter/sass/_features.scss
@@ -10,9 +10,11 @@
   gap: 6rem;
 
   align-items: start;
-  // justify-items: center;
-  // align-content: end;
-  // justify-content: end;
+
+  @media only screen and (max-width: $bp-small) {
+    margin: 6rem 0;
+    gap: 5rem;
+  }
 }
 
 .feature {
