--- a/Nexter/starter/sass/_gallery.scss
+++ b/Nexter/starter/sass/_gallery.scss
@@ -8,6 +8,10 @@
   gap: 1.5rem;
   padding: 1.5rem;
 
+  @media only screen and (max-width: $bp-small) {
+    gap: 0.5rem;
+  }
+
   &__item {
     &--1 {
       grid-row: 1 / span 2;
