--- a/Nexter/starter/sass/_story.scss
+++ b/Nexter/starter/sass/_story.scss
@@ -14,6 +14,11 @@
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      padding: 4rem;
+    }
   }
 
   &__img--1 {
@@ -21,6 +26,13 @@
     grid-row: 2 / 6;
     grid-column: 2 / 6;
     box-shadow: 0 2rem 5rem (0, 0, 0, 0.2);
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1;
+      // height: 100%;
+      // width: auto;
+    }
   }
 
   &__img--2 {
@@ -29,6 +41,12 @@
     grid-column: 4 / 7;
     z-index: 100;
     box-shadow: 0 2rem 5rem (0, 0, 0, 0.2);
+
+    @media only screen and (max-width: $bp-medium) {
+      width: 100%;
+      grid-column: 4 / 7;
+      grid-row: 1 / -1;
+    }
   }
 
   &__content {
@@ -45,6 +63,11 @@
     display: grid;
     align-content: center;
     justify-items: start;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6;
+    }
   }
 
   &__text {
